fixed overflow

--- a/valentines-day/css/style.css
+++ b/valentines-day/css/style.css
@@ -9,16 +9,18 @@ body {
         white,
         #FF9999,
         red
-    ); 
+    );
+    overflow-x: hidden; 
 }
 .single-column {
     width: 50%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
+    /* overflow-x: hidden; */
 }
 h1 {
-    color: white;
+    color: #720000;
     font-size: 25px;
 }
 .main-container {
@@ -55,4 +57,7 @@ h1 {
 }
 #yes:hover {
     background-color: #fb778d;
+}
+#gif {
+    width: 100%;
 }
